mule-user-guide/v/3.6/mule-expression-language-reference.adoc
=  Mule表达式语言参考
:keywords: anypoint studio, mel, mule expression language, native language, custom language, expression, mule expressions

link:/mule-user-guide/v/3.6/mule-expression-language-mel[骡子表达语言]（MEL）的参考页面提供了MEL特性（如操作符，文字和函数）的列表和简要解释，但不是作为MEL的介绍或详细解释。有关说明性信息，请参阅 link:/mule-user-guide/v/3.6/mule-expression-language-mel[骡子表达语言]， link:/mule-user-guide/v/3.6/mule-expression-language-basic-syntax[Mule表达式语言基本语法]和 link:/mule-user-guide/v/3.6/mule-expression-language-examples[MEL的例子]。

== 假设

本文假定您熟悉 link:/mule-user-guide/v/3.6/mule-expression-language-mel[骡子表达语言（MEL）]。

== 上下文对象，变量和字段

术语*Context Object*构成MEL表达式最简单形式的第一部分;第二部分是*Field*。

image:contextob_field.png[contextob_field]

=== 上下文对象

上下文对象为Mule消息及其环境的字段提供逻辑分组。上下文对象不仅仅是另一种表达式语言，它使MEL以骡为中心。 MEL有四个上下文对象：

*  *server*：该对象提供对硬件，操作系统，用户和网络接口的字段的访问。
*  *mule*：此对象提供对您的Mule实例的字段的访问。
*  *app*：此对象提供对Mule应用程序的字段的访问。
*  *message*：该对象提供对Mule消息字段的访问。

在MEL中，您将一个上下文对象与一个字段组合起来形成一个表达式。最简单的表达形式为`contextobject.field`。例如，这个简单的表达式：

[source]
＃[message.inboundProperties]

下表介绍了上下文对象及其有权访问的字段。

[%header,cols="15a,25a,15a,15a,30a"]
|===
|上下文对象 |字段 |只读访问 |读写访问 |字段说明
日期或时间| `server`  | `dateTime`  | x  | {{6}
| `env`  | | X  | |环境
| `fileSeparator`  | | x | |将UNIX上的文件路径的组件（{{1} 2}}在Windows上）
| `host`  | | x  | |服务器的完全限定域名
| `ip`  | | x  | |服务器的IP地址
| `locale`  | | x  | | JRE的默认语言环境（类型为java.util.Locale） locale.language和server.locale.country）
| `javaVersion`  | | x  | | JRE版本
| `javaVendor`  | | x  | | JRE供应商名称
| `nanoSeconds`  | | x  | |度量纳秒
| `osName`  | | x  | |操作系统名称
| `osArch`  | | x  | |操作系统架构
| `osVersion`  | | x  | |操作系统版本
| `systemProperties`  | | x  | | Java系统属性
JRE的默认TimeZone（java.util.TimeZone）| `timeZone`  | | x  | {{5}
| `tmpDir`  | | x  | |供JRE使用的临时目录
| `userName`  | | x  | |用户名
| `userHome`  | | x  | |用户主目录
| `userDir`  | | x  | |用户工作目录
| `mule`  | `clusterId`  | x  | |群集ID
| `home`  | | x  | |到mule服务器安装的主目录的文件系统路径
| `nodeId`  | | x  | |集群节点标识
| `version`  | | x  | | Mule版本
| `app`  | `encoding`  | x  | |应用程序默认编码
| `name`  | | x  | |应用程序名称
| `standalone`  | | x  | |如果Mule独立运行，则评估为true
| `workdir`  | | x  | |应用程序工作目录
| `registry`  | | | x  |代表Mule注册表的地图
| `message`  | `id`  | x  | | Mule消息的唯一标识符
| `rootId`  | | x  | | Mule消息的根ID
| `correlationId`  | | x  | |相关ID
| `correlationSequence`  | | x  | |相关序列
| `correlationGroupSize`  | | x  | |关联组大小
| `replyTo`  | | x  | |回复
| `dataType`  | | x  | |有效载荷的数据类型
| `payload`  | | | x  | Mule消息的有效载荷
| `inboundProperties`  | | x  | |映射表示消息的不可变入站属性
| `inboundAttachments`  | | x  | |代表邮件入站附件的地图
| `outboundProperties`  | | | x  |表示消息的可变出站属性
| `outboundAttachments`  | | | x  |代表邮件出站附件的地图
|===

=== 变量

使用MEL表达式中的*Variable*来访问Mule消息中流量变量或会话变量中包含的信息。

image:flowVars-syntax.png[flowVars语法]

它本身是MEL中的顶级标识符，变量并不要求您在表达式中定义上下文对象。 MEL评估两种类型的变量：

*  **`flowVars`**  - 保留它们的值，因为控制从单个流程中的一个消息处理器传递到另一个消息处理器。因此，您可以将它们设置在一个消息处理器中，然后使用MEL表达式在另一个消息处理器中访问它们。
*  **`sessionVars`**  - 保留它们的值，因为控制权在应用程序中从一个流传递到另一个流。因此，您可以将它们设置为一个流程，然后使用MEL表达式在另一个流程中访问它们。

此示例使用表达式访问会话变量`bar`的值，并使用它来设置流变量`foo`的值：

[source]
----
#[flowVars.foo = sessionVars.bar]
----

[TIP]
====
*Shortcut*

作为一种捷径，您可以消除表达式中的`flowVars`，只需在MEL表达式中使用变量名称即可。上面的例子可以写成如下：

[source]
----
#[foo = bar]
----

Mule假定它是一个`flowVars`，当MEL计算表达式时，按该名称查找变量。如果Mule无法通过该名称找到`flowVars`，它会在失败之前按该名称查找`sessionVars `。

如果您希望通过名称禁用变量的自动解析，请包含以下配置xml配置文件：

[source, xml, linenums]
----
<configuration>
  <expression-language autoResolveVariables="false">
</configuration>
----

请注意，MEL中的变量的范围遵循类似于Java的规则，因此如果您在给定范围内声明变量（例如在IF语句中），如果您尝试从该范围之外访问变量，则无法识别此变量。
====

=== 访问属性

本节总结了使用点语法，括号语法和空安全运算符访问MEL中属性的主要方法。

==== 点语法

通常，MEL中的属性访问是使用点语法执行的。点语法适用于地图（键是字符串时），bean或POJO。

[source]
----
#[message.payload.item]
----

==== 空安全性

要以空安全方式访问属性，请添加。？运算符在链中的一个或多个对象之前。在下面的表达式中，如果fieldA为null，则表达式的计算结果为null，而不是NullPointerException。

[source]
----
#[contextObject.?fieldA.objectB]
----

==== 转义复杂名称

复杂的对象名称可以使用单引号进行转义，如下所示：

[source, code, linenums]
----
#[message.inboundProperties.'http.query.params']

#[sessionVars.'complex name with spaces']
----

==== 括号语法

括号语法也支持访问属性和对象。在处理不是字符串的映射关键字时，或者需要评估表达式以解析映射关键字时，需要使用括号语法。

[source, code, linenums]
----
#[payload[5]]

#[flowVars['keys.' + keyName]]
----

==  Xpath和正则表达式

Mule中的MEL表达式总是解析为单个值。您可以使用*xpath3*和*regex*函数来提取尚未作为单个值存在的信息。

==== 的Xpath

link:http://www.w3.org/TR/xpath/[Xpath的]是一种用于处理XML文档部分的语言。 MEL *xpath3*函数允许您评估XPath表达式。

[%header%autowidth.spread]
|===
| {结构{1}}说明
| `#[xpath3(xPathExpression)]`  |将XPath表达式应用于消息有效内容（XML文档）并返回指定的内容。该示例返回消息负载的第一个顺序。

示例：`xpath3('/orders/order[0]')`
| `#[xpath3(xPathExpression, xmlElement)]`  |将XPath表达式应用于由作为第二个参数出现的MEL表达式指定的XML元素，并返回指定的内容。该示例返回当前消息入站附件映射中订单元素的第一个订单。

例如：+
`xpath3('/orders/order[0]', message.inboundAttachments.order)`
|===

==== 的正则表达式

正则表达式提供了一种指定要在文本流中查找的模式以及在发现时采取模式的操作的方法。正则表达式函数使您能够在MEL中使用正则表达式。 MEL中的正则表达式使用`java.util.regex`包识别的语法。

[%header,cols="35a,65a"]
|===
| {式{1}}说明
| `&#x0023;[regex(regularExpression)]` |将正则表达式应用于消息负载。

MEL处理如下：

* 使用正则表达式的编译版本和表示有效负载的字符串创建java.util.regex.Matcher。
* 使用 link:https://docs.oracle.com/javase/8/docs/api/java/util/regex/Matcher.html#matches[Matcher.matches（）]方法将有效负载与给定模式进行匹配。
* 使用 link:https://docs.oracle.com/javase/8/docs/api/java/util/regex/Matcher.html#group(int)[Matcher.group（）]方法获取正则表达式中定义的每个组的匹配（每组由括号分隔）。
* 如果没有匹配，则返回null。
* 否则，如果只有一个组，并且它匹配返回匹配，
* 否则，如果有很多组，并且每个组匹配一个数组中的返回匹配项。

例子：

有效负载：`aaabbbbbbbbbbccc`返回包含三个元素的数组：`aaa`，`bbbbbbbbbb`和`ccc`：

[source]
----
regex('(aa)(.*)(cc)')
----

有效负载为：`aaabbbbccc`返回null，因为第二个组不匹配：

[source]
----
regex('(aa)(bb)(cc)')
----

| `&#x0023;[regex(regularExpression, melExpression)]`  |将正则表达式应用于MEL表达式的值，而不是有效负载。任何字符串值的MEL表达式可以作为第二个参数出现，使用与上述相同的过程。
| `&#x0023;[regex(regularExpression, melExpression, matchFlags)]`  |将正则表达式应用于MEL表达式的值，但使用`matchFlags`位掩码，如`java.util.regex.Pattern`的Java文档中所述
|===

== 算

MEL操作符遵循标准的Java语法，但操作数是通过值来评估的，而不是通过引用来评估。例如，MEL中`'A' == 'A'`的值为true，而Java中的相同表达式的计算结果为false。

算术运算符。==== 

[%header,cols="4*"]
|===
| *Symbol*  | *Definition*  | *Example*  |返回值
| *+*  |加。对于数字，该值是操作数值的总和。对于字符串，该值是通过连接操作数的值形成的字符串。一个|
`#[2 + 4] `

`#['fu' + 'bar']`

 为|
`6`

字符串` "fubar"`

| *-*  |减号。该值是第一个操作数的值减去第二个操作数的值。 | `#[` 2  -  4] +  | ` -2`
| */*  |超过。该值是第一个操作数的值除以第二个操作数的值。 | `#[` 2/4 `]`  | `0.5`
| ** * |Times. The value is the product of the values of the operands. |`#[`2 * 4] +  | ` 8`
| *%*  |模。该值是将第一个操作数的值除以第二个操作数的值后的余数。 | `#[` 9％4] +  | ` 1`
|===

==== 比较运算符

[%header,cols="4*"]
|===
| *Symbol*  | *Definition*  | *Example*  |返回值
| *==*  |相等。当且仅当操作数的值相等时才为真 | `#[`'A'=='A'] +
 +  | `true`
| *!=*  |不等于。如果操作数的值不相等，则为真 | `#[`'A'！='B'] +  | `true`
| *>*  |大于。如果左侧的值大于右侧的值，则为真。 | `#[` 7> 5] +  | `true`
| *<*  |小于。如果左侧值小于右侧值 | `#[` 5 <5] +  | `false`
| *&gt;=*  |大于或等于。如果左侧的值大于或等于右侧的值，则为真。 | `#[` 5＆gt; = 7] +  | `false`
| *&lt;=*  |小于或等于。如果左侧的值小于或等于右侧的值，则为真。 | `#[` 5 <= 5] +  | `true`
| *contains*  |包含。如果右侧的字符串是左侧字符串的子字符串，则为真。 | `#[`'fubar'包含'bar'] +  | `true`
| *is, instance of*  |是一个实例。如果左侧的对象是右侧类的实例，则为true。 | `#[`'fubar'为String] +  | `true`
| *strsim*  |相似度。表达式的值是0到1之间的数字，表示两个字符串参数之间的相似程度。 | `&#x0023;[`'foo'strsim'foo'] +
  1.0 +
`&#x0023;[‘foobar’ strsim ‘foo’]` +  | `0.5`
| *soundslike*  |听起来像。如果根据Soundex比较，两个字符串参数听起来相似，则为真。 | `#['Robert' soundslike 'Rupert']` +  | `true`
| *Wildcard*  |针对通配符模式匹配值（缺省情况下为消息palyoad），它们使用元字符`?`来表示任何单个字符，{{2} }重复任何角色。它默认情况下区分大小写。查看更多 | `#[wildcard('Hello*')]`  | `true`
|===

==== 逻辑运算符

[%header%autowidth.spread]
|===
| *Symbol*  | *Definition*
| *&&*  |逻辑与。如果两个操作数都为真，则为真。 （请勿使用*and*。）

*Example:* `#[(a == b) && (c != d)]` +
*Value:* `true`如果`a = b`和`c ≠ d`
| *\|\|*  |逻辑或。如果至少有一个操作数为真，则为真。

*Example:* `#[true \|\|anything ]` +
  *Value:*始终`true`
| *or*  |连锁OR。从左到右扫描并返回第一个非空项目的值

*Example:* `#[payload.address or 'No address']` +
*Value:*作为对象存储在有效负载上的地址或字符串“无地址”
|===

==== 三元条件运算符

[%header,cols="4*"]
|===
| {结构{1}}定义 |示例 |值
一个|
----
condition ? true value : false value
----
|条件操作数（三元语句）a |
----
#[lastname = (name == 'Smith') ? 'Smith' : 'Unknown']
----
|如果name的值是"`Smith`"，则将变量`lastname`的值设置为字符串"`Smith`"。如果name的值不是"`Smith`"，它将变量的值设置为字符串"`Unknown`"。
|===

==== 行分界符

[%header,cols="34,33,33"]
|===
| *Symbol*  | *Definition*  | *Example*
| *;*  |您可以编写多行表达式，每行必须由a分隔;一个|
`#[calendar = Calendar.getInstance();`

`message.payload = ` `new` `org.mule.el.datetime.DateTime(calendar);]`

|===

== 字面

MEL中的文字可以是字符串，数字，布尔值，类型和空值。 <<Maps, Lists, and Arrays>>部分显示了如何将数据结构作为文字提供。

==== 数字文字

数字文字是整数和浮点数，与底层Java系统具有相同的值范围。

整数被认为是十进制的，除非它们以0开始。一个由0组成的整数，后面跟着从0到7的数字，被解释为八进制。一个以0x开头的整数，后跟数字范围从0到9，或者从a到f的字母被解释为十六进制。以大写字母I结尾的整数被解释为BigInteger。包含字母字符的文字区分大小写。

MEL通过存在小数点来识别浮点数。浮点数可以选择具有以下后缀：

*  `d`代表double
*  `f`来表示浮动
*  `B`表示BigDecimal

例子：

*  `255`
*  `0377`
*  `0xff`
*  `3.14159`
*  `3.14159f`
*  `3.14159265358979d`

==== 字符串文字

字符串文字是用单引号括起来的字符序列。在字符串文字中，您可以使用以下转义序列来表示不可打印的字符，Unicode字符和转义字符。

[%header%autowidth.spread]
|===
| *Escape Sequence*  | *Represents*
| `\ \`  | \
| `\n`  |换行符
| `\r`  |返回字符
| `\xxx`  |由八进制数xxx表示的ASCII字符
| `\uyyyy`  |用十六进制数字yyyy表示的Unicode字符
|===

[WARNING]
====
在Studio的XML编辑器中编写代码时，不能使用双引号来表示字符串文字，因为MEL表达式在配置文件中已用双引号引起来。相反，您可以：

* 使用单引号（`'expression'`）
* 将引号与“ （`&quot;expression&quot;`）
* 使用\ u0027（`\u0027expression\u0027`转义引号）

如果您在Studio的可视化编辑器上撰写，则在XML视图中将双引号转换为转义引号` (&quot;`）。
====

==== 布尔文字

布尔文字是值`true`和`false`。这些区分大小写。

==== 空文字

空文字的格式为`null`或`nil`。这些区分大小写。

==== 输入文字

您可以通过其完全限定名称引用任何Java类，或者如果它是自动导入的Java类中的其中一个类，则可以通过其非限定名称引用它。引用使用与Java中相同的点符号，除了必须使用`$`而不是点来引用嵌套类。

MEL自动导入下面列出的Java类。您可以使用这些导入的类而不使用完整限定符名称。例如，由于BigInteger已导入，因此您可以编写：

[source]
＃[BigInteger.valueOf（payload.dueAmount）]

代替：
[source]
＃[java.math.BigInteger.valueOf（payload.dueAmount）]

*  `java.lang.*`
*  `java.io.*`
*  `java.net. *`
*  `java.util.*`
*  ` java.math.BigDecimal`
*  ` java.math.BigInteger `
*  `javax.activation.DataHandler `
*  `javax.activation.MimeType `
*  `java.util.regex.Pattern `
*  `org.mule.api.transformer.DataType `
*  `org.mule.transformer.types.DataTypeFactory`

//列表中断

== 地图，列表和数组

Mule表达式语言为地图和其他数据结构使用了一种方便的语法。而不是使用新语句构建映射，列表或数组，然后使用put方法来填充它，您可以简单地将它们内联在表达式中（请参见下面的示例）。使用这种文字形式，无论你是否按名称使用地图，包括作为方法参数。

[%autowidth.spread]
|===
| *map*  | `{key1 : value1, key2 : value2, . . .}`
| *list*  | `[item1, item2, . . .]`
| *array*  | `{item1, item2, . . .}`
|===

Java中的数组必须指定其内容的类型，但在MEL中它们是无类型的。 MEL在使用它们时提供正确的类型 - 通过在编译时确定它或在运行时将数组强制转换为正确的类型。

=== 访问地图数据

与java.util.Map类似，MEL提供了一种访问地图内数据的方法。

例如，Mule消息上的`inboundProperties`以地图形式存在。您可以使用`message.inboundProperties`以MEL表达式访问此地图。要检索地图中的项目 - 名称为`foo`的项目，请使用：

[source]
----
#[message.inboundProperties['foo']]
----

[TIP]
====
*Syntax Tip*

如果地图键是字符串，则MEL还允许您使用相同的<<Accessing Properties>>来访问对象字段以访问地图值，即`#[map.key]`。因此，你可以像这样写上面的表达式：

[source]
----
#[message.inboundProperties.foo]
----

在Anypoint Studio中，自动完成支持所有对象字段的此点语法。但是，如果键不是字符串，或者需要评估表达式以获取要使用的实际键，则必须使用括号语法进行映射访问。
====

要设置消息的出站属性，请使用：

[source]
----
#[message.outboundProperties['key'] ='value']
----

要删除密钥，必须明确使用映射的删除方法：

[source]
----
#[message.outboundProperties.remove('key')]
----

== 通配符函数

通配符函数将匹配通配符表达式模式的值。通配符表达式模式是一个可以使用元字符'？'的字符串表示任何单个字符，'*'表示重复任何字符。

通配符函数具有签名`wildcard( wildcardExpression, target, isCaseSensitive)`。

[%header,cols="17,8,40,20,8"]
|===
| {参数{1}}输入 | 说明 |缺省|必
| wildcardExpression  |字符串| 用于匹配目标字符串的通配符表达式。 | |是
|目标 |字符串| 这通常是一个MEL表达式，其值为目标字符串。

matchExpression字符串与此目标字符串匹配。

| `#[message.payload]`  |无
| isCaseSensitive  |布尔值| 如果为true，则区分大小写包含在匹配中。

例如，如果此参数为true，则"Hello*"不会与"hello world"匹配。如果此参数为false，则"Hello*"将匹配"hello world"。| true   |否
|===

如果您仅提供第一个wildcardExpression字符串，则匹配将针对默认目标MEL表达式`#[message.payload]`完成，并且匹配区分大小写。

考虑下面的示例应用于具有以下字符串有效内容的消息：`Hello World`。

[source, code, linenums]
----
wildcard("Hello*") // returns true
wildcard("hello*") // returns false
wildcard("*World") // returns true
wildcard("??????World") // returns true
wildcard("GoodBye*") // returns false
wildcard("*llo*d") // returns true
----

对于更高级的用例，下面的示例适用于包含值`Hello World`的名为`'foo'`的入站属性的消息：

[source, code, linenums]
----
wildcard("Hello*", message.inboundProperties['foo']) // returns true
wildcard("hELLO*", message.inboundProperties['foo'], false) // returns true
wildcard("*world",message.inboundProperties['foo'], true) // returns false
----

== 另请参阅

* 有关在MEL中提取和操作日期和时间的参考，请参阅 link:/mule-user-guide/v/3.6/mule-expression-language-date-and-time-functions[MEL日期和时间函数]。
* 有关使用MEL的完整示例应用程序，请访问 link:/mule-user-guide/v/3.6/mule-expression-language-examples[Mule表达语言示例]。
